Keep answering when the values arrive as an overlay
Reverts the previous commit. Gating at the mapper stands, but being gated is not
the same as always being handed the column: an updated field is read as an overlay
of its layers, which is no column, and the values are read a document at a time.

Preparation for #157749.